--- a/package.json
+++ b/package.json
@@ -5,15 +5,15 @@
   "main": "dist/app.js",
   "scripts": {
     "dev": "wepy build --watch",
+    "prebuild": "rm -rf dist",
     "build": "cross-env NODE_ENV=production wepy build --no-cache",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "wepy": "^1.6.0",
-    "wepy-async-function": "^1.4.4",
-    "wepy-com-toast": "^1.0.2"
+    "wepy": "^1.7.0",
+    "wepy-async-function": "^1.4.4"
   },
   "devDependencies": {
     "babel-eslint": "^7.2.1",
@@ -29,8 +29,12 @@
     "eslint-plugin-html": "^2.0.1",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^2.0.1",
+    "uglify-js": "^3.3.9",
     "wepy-compiler-babel": "^1.5.1",
     "wepy-compiler-less": "^1.3.10",
-    "wepy-eslint": "^1.5.2"
+    "wepy-compiler-sass": "^1.3.7",
+    "wepy-eslint": "^1.5.2",
+    "wepy-plugin-imagemin": "^1.5.3",
+    "wepy-plugin-uglifyjs": "^1.3.7"
   }
 }
